AARCH64: ld/st instructions hit guarantee assert while using sp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 11
    • Affects Version/s: 9, 10
    • Component/s: hotspot
    • b04
    • aarch64

      Hotspot crash on guarantee assertion trying to generate code with SIMD ld/st(1,2,3,4) instructions with sp register usage. According to specification, these instructions can be used from stack too. Seems like no hotspot code path is using such combination, so, this case wasn't found so far.

            Assignee:
            Dmitrij Pochepko
            Reporter:
            Dmitrij Pochepko
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: