8196868: AARCH64: ld/st instructions hit guarantee assert while using sp

Reviewed-by: aph